Mudança na estrutura

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,20 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div id="leftbar">
-  <div id="perfil">
-    
-  </div>
-  <div class="options">
-    
-  </div>
-  <div class="options">
-    
-  </div>
-  <div class="options">
-    
+<div id="container">
+
+<div id="left">
+    <div id="imgDiv"><img id="headerImg" src="https://scontent.frec10-1.fna.fbcdn.net/v/t1.0-9/20708380_1460290217373488_8870073043789258684_n.jpg?oh=23ad8f2b94ca5eee861484d828ee0582&oe=5AA17864"></div>
+
+    <div id="namehold">
+      <h1>Rafael Prado Santos</h1>
+    </div>
+
+  <div id="social">
+    <div class="socialOpt" id="facebook"><img class="socialImg" src="http://simpleicon.com/wp-content/uploads/facebook.png"></div>
+    <div class="socialOpt" id="github"><img class="socialImg" src="http://simpleicon.com/wp-content/uploads/facebook.png"></div>
+    <div class="socialOpt" id="gmail"><img class="socialImg" src="http://simpleicon.com/wp-content/uploads/facebook.png"></div>
+    <div class="socialOpt" id="spotify"><img class="socialImg" src="http://simpleicon.com/wp-content/uploads/facebook.png"></div>
+    <div class="socialOpt" id="curriculum"><img class="socialImg" src="http://simpleicon.com/wp-content/uploads/facebook.png"></div>
+    <div class="socialOpt" id="instagram"><img class="socialImg" src="http://simpleicon.com/wp-content/uploads/facebook.png"></div>
   </div>
 </div>
 
-<div id="content">
-  
 </div>
-
