--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,125 @@
-#leftbar{
-	width: 20%;
-	height: 100%;
-	padding: 0;
-	margin: 0;
-	background-color: #BCC6CC;
-	float: left;
+*{
+	background-color: transparent;
 }
-#content{
-	width: 80%;
-	height: 100%;
-	padding: 0;
+#container{
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	-webkit-flex-direction: row; /* Safari */
+  	flex-direction:         row;
+  	-webkit-flex-wrap: nowrap; /* Safari */
+  	flex-wrap:         nowrap;
+  	-webkit-justify-content: start; /* Safari */
+  	justify-content:         start;
+  	-webkit-align-items: baseline; /* Safari */
+  	align-items:         baseline;
+  	-webkit-align-content: center; /* Safari */
+  	align-content:         center;
+}
+#left{
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	-webkit-flex-direction: column; /* Safari */
+  	flex-direction:         column;
+  	-webkit-flex-wrap: wrap; /* Safari */
+  	flex-wrap:         wrap;
+  	-webkit-justify-content: center; /* Safari */
+  	justify-content:         center;
+  	-webkit-align-items: center; /* Safari */
+  	align-items:         center;
+  	-webkit-align-content: center; /* Safari */
+  	align-content:         center;
+
+  	width: 30vw;
+  	height: 100vh;
+}
+#imgDiv{
+	width: 30vw;
+	height: 25vh;
+}
+#headerImg{
+	max-width: 30vw;
+	max-height: 25vh;
+	border-radius: 100%;
+}
+
+#namehold{
+	background-color: ;
+	width: 100%;
+	max-height: 20%; 
 	margin: 0;
+	padding: 0;
+	border: 0;
+	text-align: center;
+}
+#namehold h1{
+	font-size: 5vh;
+	font-style: oblique;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	color: white;
+}
+
+#social{
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	-webkit-flex-direction: row; /* Safari */
+  	flex-direction:         row;
+  	-webkit-flex-wrap: wrap; /* Safari */
+  	flex-wrap:         wrap;
+  	-webkit-justify-content: center; /* Safari */
+  	justify-content:         center;
+  	-webkit-align-items: center; /* Safari */
+  	align-items:         center;
+  	-webkit-align-content: center; /* Safari */
+  	align-content:         center;
+	width: 30vw;
+  	height: 30vh;
+}
+
+.socialOpt{
+	display: -webkit-flex; /* Safari */
+	display: flex;
+	-webkit-flex-direction: column; /* Safari */
+  	flex-direction:         column;
+  	-webkit-flex-wrap: nowrap; /* Safari */
+  	flex-wrap:         nowrap;
+  	-webkit-justify-content: center; /* Safari */
+  	justify-content:         center;
+  	-webkit-align-items: center; /* Safari */
+  	align-items:         center;
+  	-webkit-align-content: center; /* Safari */
+  	align-content:         center;
+
+	width: 15vw;
+	height: 20vh;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+.socialImg{
+	width: 80%;
+	height: 80%;
+	-webkit-filter: brightness(300%); /* Safari 6.0 - 9.0 */
+    filter: brightness(300%);
+    -webkit-filter: invert(300%); /* Safari 6.0 - 9.0 */
+    filter: invert(300%);
+}
+
+#facebook{
+	background-color: #3b5998;
+}
+#github{
+	background-color: black;
+}
+#instagram{
+	background-color: #cd486b;
+}
+#spotify{
+	background-color: #1db954;
+}
+#gmail{
+	background-color: #c71610;
+}
+#curriculum{
+	background-color: #666666;
 }
